# swift-embedded-examples

./: .gitignore  .swift-version  .swiftformatignore  README.md
.github/actions/install-swift/: action.yml
.github/workflows/: build-esp.yml  build-nuttx.yml  build-rpi-baremetal.yml  build-rpi-pico-sdk.yml  build-stm32-elf.yml  build-stm32-macho.yml  build-zephyr.yml  lint.yml  update-swift-version.yml
Documentation/: README.md
Sources/EmbeddedSwift/Documentation.docc/GuidedExamples/: PicoGuide.md  STM32BaremetalGuide.md  macOSGuide.md
Sources/EmbeddedSwift/Documentation.docc/UsingEmbeddedSwift/: Basics.md  Existentials.md  Strings.md
Sources/EmbeddedSwift/EmbeddedSwift.docc/SDKSupport/: IntegratingWithPlatforms.md
Sources/EmbeddedSwift/EmbeddedSwift.docc/UsingEmbeddedSwift/: ExternalDependencies.md
Tools/SVDs/: README.md
Tools/Toolsets/: rpi-5-elf.json
esp32-led-blink-sdk/: README.md
esp32-led-blink-sdk/main/: CMakeLists.txt
esp32-led-strip-sdk/: README.md
esp32-led-strip-sdk/main/: BridgingHeader.h  CMakeLists.txt  LedStrip.swift  Main.swift  idf_component.yml
esp32-uart-echo/: CMakeLists.txt  README.md
esp32-uart-echo/main/: BridgingHeader.h  CMakeLists.txt  Main.swift  SwiftStubs.c  Uart.swift  idf_component.yml
rpi-4b-blink/: Makefile
rpi-5-blink/: Makefile
rpi-pico-blink/: Makefile
rpi-pico-blink-sdk/: CMakeLists.txt
rpi-pico2-neopixel/: Makefile
rpi-picow-blink-sdk/: CMakeLists.txt  Main.swift
stm32-blink/: README.md
stm32-blink/Sources/Application/: Application.swift
stm32-lvgl/: Makefile  Package.swift  toolset.json
stm32-lvgl/Sources/Application/: Clocks.swift  Debug.swift  I2C.swift  Interrupts.swift  Main.swift  Pins.swift  Sdram.swift  UIAppLogic.swift
stm32-lvgl/Sources/HostSDLApp/: Main.swift
stm32-neopixel/: Makefile
stm32-uart-echo/: Makefile
